Misc. improvements to nested bench (charting, etc.)